<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="com.subhan_nadeem.sandcastle.features.auth.LoginFragment"/>

        <variable
            name="viewModel"
            type="com.subhan_nadeem.sandcastle.features.auth.LoginViewModel"/>
    </data>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sandcastle_blue"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="40dp"
            tools:visibility="visible">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/family_coolvetica"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/sandcastle"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/title_text"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/logo"
                android:src="@drawable/ic_sandcastle_large"/>

            <!-- Username Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:id="@+id/usernameTextInputLayout"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.loading ? false : true}"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:text="@={viewModel.username}"
                    android:textColor="@android:color/white"
                    app:error="@{viewModel.usernameError}"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameTextInputLayout"
                android:layout_marginBottom="8dp"
                android:id="@+id/passwordInput"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.loading ? false : true}"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@android:color/white"
                    app:error="@{viewModel.passwordError}"/>
            </android.support.design.widget.TextInputLayout>

            <include
                android:id="@+id/loginButtons"
                android:layout_below="@id/passwordInput"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_login_register_buttons"
                bind:view="@{view}"
                bind:viewModel="@{viewModel}"/>
        </RelativeLayout>
</layout>